Adicionando Dockerfile e ajustes finais para a API v1